--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -31,16 +31,20 @@
 		<table class="table">
 
 			<caption><strong style="color: #000000;">商品列表</strong></caption>
-			<thead>
+			<thead>	
 				<tr>
 					<th>序号</th>
 					<th>订单号</th>
-					<th>用户名</th>
-					<th>商品号</th>
+					<th>用户ID</th>
+					<th>价格</th>
 					<th>下单时间</th>
-					<th>状态</th>
-					<th>总价</th>
-					<th>总数</th>
+					<th>是否审核</th>
+					<th>是否通过</th>
+					<th>是否取消</th>
+					<th>是否付款</th>
+					<th>是否发货</th>
+					<th>付款是否完成</th>
+					<th>订单是否关闭</th>
 					<th>修改状态</th>
 					<th>编辑</th>
 				</tr>
@@ -89,10 +93,41 @@
 	<small>Version 5.0</small> {% endblock %} {% block script %}
 	<script>
 		//将数据字段添加到标签内 data 为字典
+        
+		function ShowDiv(show_div, bg_div) {
+			var commName = ""
 
+			var url = "http://localhost:8000/ordertabalelistJaon/"; //后台接收处理url
+			// data =data;
+			// var objData = "goodsid=" + addGoodsIdRed; //post方式传送的数据
+			// console.log(objData)
+			$.ajax({
+				url: url,
+				type: 'POST',
+				success: "success",
+				data: {"userid":"aaa","orderid":"vvv"},
+				success: function(data) {
+					console.log(data.data)
+					
+					
+					for(var i = 0; i < data.data.length; i++) {
+						// if(data.data[i].goodsid == addGoodsIdRed) {
+						addToHtml(data.data[i]);
+							// ue.setContent(detailsAll);
+							//						
+						// }
+					}
+				},
+				error: function(msg) {
+					console.log("error 加载数据失败")
+				}
+			});
+		}
+		ShowDiv();
 		function addToHtml(data) {
-
+			console.log("++++++++++++++++++++++++")
 			userid = data["userid"]
+			// orderid=data.orderid;
 			orderid = data["orderid"]
 			price = data["price"]
 			ordertime = data["ordertime"]
@@ -103,9 +138,11 @@
 			issend = data["issend"]
 			ispaydone = data["ispaydone"]
 			isclose = data["isclose"]
-			var myHtml = '<tr><th scope="row">1</th><td>' + orderid + '</td><td>' + userid + '</td><td>数据库不存在</td><td>' + ordertime + '</td><td>需要判断的状态</td><td>数据库不存在</td><td>数据库不存在</td><td><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></td><td ><span class="glyphicon glyphicon-trash deletespan" aria-hidden="true"></span></td></tr>'
+			console.log(data)
+			var myHtml = '<tr><th scope="row">1</th><td>' + orderid + '</td><td>' + userid + '</td><td>' + price + '</td><td>'+ordertime+'</td><td>' + isaudit + '</td><td>'+ispass+'</td><td>'+iscancel+'</td><td>'+ispay+'</td><td>'+issend+'</td><td>'+ispaydone+'</td><td>'+isclose+'</td><td><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></td><td ><span class="glyphicon glyphicon-trash deletespan" aria-hidden="true"></span></td></tr>'
 			$("#mytbody").append(myHtml)
 		}
+		// addToHtml();
 
 		//解析数据 data为数组
 		function parseFn(data) {
@@ -128,26 +165,34 @@
 				});
 			});
 		}
+		$.ajax({
+            url: "http://localhost:8000/ordertableManageJsonSelete/",
+            context: document.body,
+            success: function(result) {
+                for(var i = 0; i < result.length; i++) {
+				console.log(result)
+                addToHtml(result)
+                }
+            }
+        });
 		
 		
 		
 		$('#tijiao').bind("click", function(){
 			var orderid = $('#orderid').val();
-			var userid = $('#userid').val();
+			var price = $('#price').val();
 			var status = $("#myStatus").find("option:selected").val();
 			console.log("((((((((");
-			console.log(userid,orderid , status),
+			console.log(price,orderid , status),
 			// console.log(userid , orderid , status)
 			$.ajax({
 			
-			url: "http://localhost:8000/ordertableManageJsonSelete/?orderid="+orderid+"&userid="+userid+"&status="+status+"",
+			url: "http://localhost:8000/ordertableManageJsonSelete/?orderid="+orderid+"&price="+price+"&status="+status+"",
 			success: function(result) {
 				console.log("aaa")
 				console.log(result)
-
-			}
-		});
-			
+				}
+	     	});		
 		});
 
 	</script>
