update the address JSON implement in 12_14

--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -25,9 +25,9 @@
 			</form>
 		</div>
 
-		<div iclass="col-md-1" id="orderCount">
+		<!-- <div iclass="col-md-1" id="orderCount">
 			共有数据：100条
-		</div>
+		</div> -->
 		<table class="table">
 
 			<caption><strong style="color: #000000;">商品列表</strong></caption>
