--- a/shopServer/templates/addLunbo.html
+++ b/shopServer/templates/addLunbo.html
@@ -81,7 +81,8 @@
 			$(this).ajaxSubmit({
 				success: function (result) {
 					console.log("chenggong ");
-					console.log(result);
+                    console.log(result);
+                    window.location.href = "http://localhost:8000/goodsManage/";
 				}
 			})
 		});
