--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -655,7 +655,7 @@
 
 		<script src="{% static 'js/jquery.twbsPagination.js' %}"></script>
 
-		<!--<script src="{% static 'dist/js/demo.js' %}"></script>-->
+		<script src="{% static 'js/tool.js' %}"></script>
 
 		{% block script %}{% endblock %}
 	</body>
