--- a/shopServer/templates/userManage.html
+++ b/shopServer/templates/userManage.html
@@ -25,6 +25,8 @@
 			background-color: #F2F9FE;
 		}
 		#userTable .ele{
+            text-align: center;
+            vertical-align: middle;
 			background-color: white;
 		}
 		.table{
@@ -49,16 +51,16 @@
 
 {% block content %}
     <div class="container-fluid">
-        <form class="form-inline" role="form">
+        <form class="form-inline searchForm" role="form" method="post">
             <div class="form-group">
                 <label class="" >用户名:</label>
-                <input type="text" class="form-control" id="exampleUsername" placeholder="请输入用户名">
+                <input type="text" class="form-control" name="username" id="exampleUsername" placeholder="请输入用户名">
             </div>
             <div class="form-group">
                 <label class="" >手机号:</label>
-                <input type="password" class="form-control" id="exampleInputPhoneNumber" placeholder="请输入手机号">
+                <input type="text" class="form-control" name="phone" id="exampleInputPhoneNumber" placeholder="请输入手机号">
             </div>
-            <button type="submit" class="btn btn-default submit"><span class = "glyphicon glyphicon-search">查询会员</span></button>
+            <button type="button" class="btn btn-default submit search"><span class = "glyphicon glyphicon-search">查询会员</span></button>
         </form>
         <hr/>
 	
@@ -66,8 +68,14 @@
         <table  class="table table-bordered">
             <th colspan="11">
                 
-                    <button class="btn btn-default trash"><span class = "glyphicon glyphicon-trash">批量删除</span></button>
+                    <button class="btn btn-default trash AllDelete"><span class = "glyphicon glyphicon-trash">批量删除</span></button>
                     <button class="btn btn-default plus btn btn-primary" data-toggle="modal" data-target="#plusModal" ><span class = "glyphicon glyphicon-plus">添加会员</span></button>
+                    <form action="" id="headImgForm" method="post">
+                        <input type="text" placeholder="仅供测试" name="imgUserName">
+                        <input type="file" name="headImg" id="headImg">
+                        <input type="button" id="headImgBtn" value="修改">
+                    </form>
+                    
                     <label id="userNumber" class="count" style="float: right; padding-right: 4%;">共有数据</label>
                 
             </th>
@@ -116,7 +124,7 @@
                             </div>
                             <div class="form-group">
                             <label for="recipient-name" class="control-label">用户密码:</label>
-                            <input type="text" class="form-control" name="pwd">
+                            <input type="text" class="form-control" name="password">
                             </div>
                             <input type="submit" class="btn btn-primary" value="添加">
                         </form>
@@ -126,7 +134,7 @@
 			</div>
 			<!-- /.modal-dialog -->
         </div>
-
+        <img src="" alt="">
 
         
         <!-- Small modal -->
@@ -154,6 +162,7 @@ $(".addform").on('submit', function(e){
     
 
     <script type="text/javascript">
+
     $('.addform').on('submit', function(e) {
         console.log("jjjjjj");
         e.preventDefault(); 
@@ -192,7 +201,7 @@ $(".addform").on('submit', function(e){
                 var acountmoney = mydata["acountmoney"];
                 var power = mydata["power"];
                 var activecode = mydata["activecode"];
-                var ele = '<tr userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" heading = "' + headimg + '" acountmoney = "' + acountmoney + '" headimg="' + headimg +'"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" type="checkbox"/></td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele">' + headimg + '</td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑</button>     <button class="btn btn-default delete">删除</button></td></tr>'
+                var ele = '<tr class="mytr" userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" acountmoney = "' + acountmoney + '" headimg="' + headimg +'"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele"><img height="40px" width="40px" src="http://localhost:8000/static/myfile/' + headimg +'" alt=""></td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑</button>     <button class="btn btn-default delete">删除</button></td></tr>'
                 $(".myModal").empty();
                 $("#userTable").append(ele);
              
@@ -242,6 +251,23 @@ $(".addform").on('submit', function(e){
             })
             $("#userNumber").text("共有数据" + data.data.length + "条");
         }
+        $(".AllDelete").click(function(){
+            console.log("批量删除");
+            $("[name = checkbox-one]:checkbox").each(function () {
+                if ($(this).is(":checked")) {
+                    console.log("xuanzhong");
+                    var that = $(this).parents('tr');
+                    var objData = that.attr('userid')
+                    var url = "http://localhost:8000/userManageJsonDelete/";
+                    console.log(objData)
+                    ajaxFn(url , objData , function(){
+                        $(that).remove();
+                    })
+                }
+            });
+            
+        });
+
         
 
 
@@ -266,22 +292,73 @@ $(".addform").on('submit', function(e){
             onPageClick: function (event, page) {   
             }
         });
-
-        function ajaxFn(urlString , postdata , fn){
-            var xmlhttp=new XMLHttpRequest();
-            xmlhttp.onreadystatechange=function()
+    function ajaxSubmitForm(){
+        console.log('ajaxsubmit');
+        var option = 
+        {
+            url : "http://localhost:8000/userManageJsonSelect/",
+            type : 'POST',
+            dataType : 'json',
+            success : function(data)
+            {   
+                console.log(data);
+                $('.mytr').remove();
+                dataParse(data);
+                
+            },
+            error: function(data)
             {
-                if (xmlhttp.readyState==4 && xmlhttp.status==200)
-                {
-                    result = xmlhttp.responseText;
-                    console.log(result)
-                    fn(result);
-                }
+                console.log("chucuole ");
             }
-            xmlhttp.open("POST",urlString,true);
-            xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded')
-            xmlhttp.send("data = " + postdata);
-        }       
+        };
+        $(".searchForm").ajaxSubmit(option);
+        return false;
+    }
+    $(".search").click(function(){
+        console.log("查询按钮");
+        ajaxSubmitForm();
+    });
+
+
+
+    $("#headImgBtn").click(function (){
+        console.log('ajaxsubmit');
+        var option = 
+        {
+            url : "http://localhost:8000/uploadHeadImg/",
+            type : 'POST',
+            dataType : 'json',
+            success : function(data)
+            {   
+                console.log(data);
+                
+            },
+            error: function(data)
+            {
+                console.log("chucuole ");
+            }
+        };
+        $("#headImgForm").ajaxSubmit(option);
+        return false;
+    });
+
+
+    function ajaxFn(urlString , postdata , fn){
+        var xmlhttp=new XMLHttpRequest();
+        xmlhttp.onreadystatechange=function()
+        {
+            if (xmlhttp.readyState==4 && xmlhttp.status==200)
+            {
+                result = xmlhttp.responseText;
+                console.log(result)
+                fn(result);
+            }
+        }
+        xmlhttp.open("POST",urlString,true);
+        xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded')
+        xmlhttp.send("data = " + postdata);
+    }
+    
         
     </script>
 
